# zallet

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.stagex  README.md  flake.nix
.github/workflows/: aggregate-audits.yml  audits.yml  binaries-and-deb-release.yml  book.yml  build-and-push-docker-hub.yaml  build-arm64-nix.yml  ci.yml  lints.yml  release.yml  test-docker-container.yml  zizmor.yml
.mirror/: mirror.config.json  mirror.py
backends/zaino/: Cargo.toml
backends/zaino/src/: chain.rs
backends/zebra/: Cargo.toml
backends/zebra/src/: chain.rs
backends/zebra/src/chain/: reader.rs  rpc.rs
backends/zebra/tests/: acceptance.rs
backends/zebra/tests/cmd/: example_config.toml  migrate_zcash_conf_mainnet.toml  migrate_zcash_conf_regtest.toml  migrate_zcash_conf_testnet.toml
backends/zebra/tests/cmd/example_config.out/: zallet.toml
book/src/: README.md  SUMMARY.md
book/src/cli/: example-config.md  export-mnemonic.md  init-wallet-encryption.md  migrate-zcash-conf.md  migrate-zcashd-wallet.md  rpc.md
book/src/guide/installation/: README.md
supply-chain/: config.toml
tools/gen-copyright/src/: main.rs
utils/: check-lockstep.sh  sync-lockfiles.sh
zallet/: Cargo.toml
zallet-core/: Cargo.toml
zallet-core/i18n/en-US/: zallet_core.ftl
zallet-core/src/: application.rs  cli.rs  commands.rs  config.rs  network.rs
zallet-core/src/commands/: example_config.rs  export_mnemonic.rs  migrate_zcash_conf.rs  migrate_zcashd_wallet.rs  start.rs
zallet-core/src/components/: chain.rs  keystore.rs  sync.rs
zallet-core/src/components/chain/: zaino.rs  zebra.rs
zallet-core/src/components/json_rpc/: methods.rs  payments.rs
zallet-core/src/components/json_rpc/methods/: get_notes_count.rs  get_raw_transaction.rs  view_transaction.rs
zallet-core/src/components/sync/: steps.rs
zallet/i18n/en-US/: zallet.ftl
zallet/src/: error.rs  main.rs
zallet/src/commands/: migrate_zcashd_wallet.rs  start.rs
zallet/src/components/: chain.rs  database.rs  keystore.rs
zallet/src/components/chain/: zaino.rs  zebra.rs
zallet/src/components/chain/zebra/: reader.rs
zallet/src/components/database/: connection.rs
zallet/src/components/json_rpc/: methods.rs  payments.rs  server.rs
zallet/src/components/json_rpc/methods/: view_transaction.rs  z_finalize_transaction.rs  z_propose_transaction.rs  z_send_from_account.rs  z_send_many.rs  z_shieldcoinbase.rs
zallet/src/components/sync/: steps.rs
